# CiEApplication

./: .gitignore  CMakeLists.txt
include/CiEApplication/: CiEApplication.hpp  SYCLCGSolver.hpp
src/: CiEApplication.cpp  SYCLCGSolver.cpp
src/bindings/: bindings.cpp
src/scripts/: __init__.py
